fixes switch vertical alignment issue

--- a/src/components/calcite-switch/calcite-switch.scss
+++ b/src/components/calcite-switch/calcite-switch.scss
@@ -48,6 +48,10 @@
   @apply focus-outset;
 }
 
+.container {
+  @apply flex;
+}
+
 .track {
   @apply relative 
     inline-block 
